--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ video {
 }
 
 .rounded-sm {
-    border-radius: .125rem
+    border-radius: .74rem
 }
 
 .border {
@@ -497,11 +497,12 @@ video {
 }
 
 .p-4 {
-    padding: 1rem
+    padding: 0.7rem
+    padding-left: 10rem;
 }
 
 .p-\[12px\] {
-    padding: 12px
+    padding: 9px
 }
 
 .px-4 {
@@ -561,6 +562,7 @@ video {
 .text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255/var(--tw-text-opacity))
+    font-weight: 600;
 }
 
 /*# sourceMappingURL=style.css.map */
